# SMV-Smart-Contract-System

./: .gitignore  CMakeLists.txt  README.md  package.json  ton-client-js.d.ts  ton-client-node-js.d.ts  tsconfig.json
docs/: glossary.md  notes.md
src/: helloworld.ts  index.js  index.js.map  index.ts
src/debots/: DebotABI.abi.json  DebotABI.code  TestDeBot.abi.json  TestDeBot.code  TestDeBot.sol
src/sandbox/: AuthRoot.abi.json  IAuthRoot.sol  IAuthWallet.sol  Index.sol  code.txt  code2.txt  code_decoded.txt  code_encoded.txt  code_json.txt
temp/: testDeBot.tvc
tests/: example.test.ts
tonlabs/: I.sol
tonlabs/tokens-auth/: AuthRoot.cpp
